# keccak-circuit-benchmarks

./: .gitignore  README.md
Axiom/hashes/zkevm-keccak/: Cargo.toml
Axiom/hashes/zkevm-keccak/data/: config.json
Axiom/hashes/zkevm-keccak/src/: keccak_packed_multi.rs
Axiom/hashes/zkevm-keccak/src/keccak_packed_multi/: tests.rs
JumpCrypto/: Cargo.toml
JumpCrypto/src/: keccak256.rs  lib.rs  main.rs  types.rs
JumpCrypto/src/nonnative/gadgets/: biguint.rs
JumpCrypto/src/u32/gadgets/: arithmetic_u32.rs  interleaved_u32.rs  multiple_comparison.rs
JumpCrypto/src/u32/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  interleave_u32.rs  range_check_u32.rs  subtraction_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
Maru/: Cargo.toml
Maru/keccak1/: Cargo.toml
Maru/keccak1/src/: cross_table_lookup.rs  keccak.rs  keccak_ctl_stark.rs  lib.rs  main.rs  recursion.rs  snark_aggregation.rs  stark_aggregation.rs
Maru/keccak1/src/keccak_permutation/: columns.rs  ctl.rs  keccak_permutation_proof.rs  keccak_permutation_stark.rs  mod.rs  round_flags.rs
Maru/keccak1/src/keccak_sponge/: columns.rs  ctl.rs  keccak_sponge_proof.rs  keccak_sponge_stark.rs  keccak_util.rs  mod.rs
Maru/keccak_ctl/: Cargo.toml
Maru/keccak_ctl/src/: get_challenges.rs  keccak.rs  keccak_ctl_stark.rs  keccak_proof.rs  lib.rs  main.rs  proof_ctl.rs  prover_ctl.rs  snark_aggregation.rs  stark_aggregation.rs  verifier_ctl.rs
Maru/keccak_ctl/src/keccak_permutation/: columns.rs  ctl.rs  keccak_permutation_stark.rs  mod.rs  round_flags.rs
Maru/keccak_ctl/src/keccak_sponge/: columns.rs  ctl.rs  keccak_sponge_stark.rs  keccak_util.rs  mod.rs
Maru/keccak_ctl/src/keccak_xor/: columns.rs  ctl.rs  mod.rs  xor_stark.rs
Maru/starky/: Cargo.toml
Maru/starky/src/: constraint_consumer.rs  get_challenges.rs  lib.rs  permutation.rs  proof.rs  prover.rs  recursion.rs  serialization.rs  stark.rs  util.rs  vanishing_poly.rs  verifier.rs
Maru/starky_ctl/: Cargo.toml
Maru/starky_ctl/src/: cross_table_lookup.rs  get_challenges.rs  lib.rs  permutation.rs  proof.rs  prover.rs  recursion.rs  recursion_no_ctl.rs  serialization.rs  stark.rs  stark_testing.rs  table.rs  util.rs  vanishing_poly.rs  verifier.rs
PolygonZero-plonky3/Plonky3/code/: Cargo.toml
PolygonZero-plonky3/Plonky3/dft/src/: radix_2_dit_parallel.rs  util.rs
PolygonZero-plonky3/Plonky3/field/src/extension/: quadratic.rs
PolygonZero-plonky3/Plonky3/keccak-air/: Cargo.toml
PolygonZero-plonky3/Plonky3/keccak-air/benches/: keccak_air.rs
PolygonZero-plonky3/Plonky3/keccak-air/src/: air.rs  generation.rs  logic.rs
PolygonZero-plonky3/Plonky3/matrix/: Cargo.toml
PolygonZero-plonky3/Plonky3/matrix/src/: dense.rs  mul.rs
PolygonZero-plonky3/Plonky3/maybe-rayon/src/: lib.rs
PolygonZero-plonky3/Plonky3/symmetric/src/: hasher.rs
PolygonZero-plonky3/Plonky3/uni-stark/src/: decompose.rs  prover.rs
