[package]
name = "keccak256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
plonky2 = { version = "0.1", default-features = false, features = ["gate_testing", "rand_chacha", "std", "parallel"]}
plonky2_maybe_rayon = { version = "0.1" }
itertools = "0.10.5"
num = { version = "0.4.0", default-features = false }
serde = "1.0.152"
serde_with = { version = "2.2.0", features = ["hex"] }
rayon = { version = "1.5.3" }
hex = { version = "0.4.3" }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
keccak-hash = "0.10.0"
log = "0.4.14"
env_logger = "0.10.0"
sha3 = { version = "0.10.6" }
jemallocator = "0.5.0"

[dev-dependencies]
criterion = { version = "0.4"}
