[package]
name = "keccak1"
version = "0.1.0"
edition = "2021"

# no ctl while proving 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2.workspace = true
plonky2_util.workspace = true
plonky2_field.workspace = true
plonky2_maybe_rayon.workspace = true

starky.workspace = true
rayon.workspace = true
anyhow.workspace = true
itertools.workspace = true
log.workspace = true
env_logger.workspace = true
rand.workspace = true
serde.workspace = true
keccak-hash.workspace = true
tiny-keccak.workspace = true
hashbrown.workspace = true
ethereum-types.workspace = true
num.workspace = true

[lib]
doctest = false

[build]
rustflags = ["-C", "target-cpu=native"]